# ai-perps-trader

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml  run.py
scripts/: capture_screenshots.py
src/: main.py  utils.py
src/agents/: funding_rate_analyst.py  market_selector.py  oi_analyst.py  portfolio_manager.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py
src/graph/: state.py
src/tools/: hyperliquid_data.py  sentiment_data.py
